[metadata]
name = tclx
author = CarperAI
version = 0.0.1
url = https://github.com/CarperAI/tclx
description = A repo for transformer critique learning and generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    datasets
    transformers
    deepspeed
    accelerate