[metadata]
name = autocrit
author = CarperAI
version = 0.0.1
url = https://github.com/CarperAI/autocrit
description = A repo for transformer critique learning and generation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    datasets
    transformers
    deepspeed
    accelerate
    sentencepiece
    peft
    openai
    numpy
    torch
    tqdm
    rich
